--- a/uncompiled_scss/style.scss
+++ b/uncompiled_scss/style.scss
@@ -26,6 +26,7 @@
 @import "styles/shadow_layers";
 @import "styles/carousel";
 @import "styles/partners";
+@import "styles/locations";
 
 body {
   background: url("../images/background.svg") left top no-repeat, url("../images/film.svg") 50% -100px no-repeat,
