--- a/uncompiled_scss/styles/_costs.scss
+++ b/uncompiled_scss/styles/_costs.scss
@@ -1,9 +1,9 @@
 .costs-box {
-  
+  position: relative;
 
   .costs-subheader {
     padding-right: 40%;
-    padding-left: 80px;
+    padding-left: 60px;
     padding-top: 50px;
     padding-bottom: 40px;
 
