--- a/uncompiled_scss/styles/_platform.scss
+++ b/uncompiled_scss/styles/_platform.scss
@@ -1,8 +1,8 @@
 .our-platform-box {
-  width: 65%;  
   margin-top: 100px;
   position: relative;
   z-index: 10;
+  padding-right: 35%;
 
   .our-platform-head {
     margin-bottom: 40px;
