--- a/uncompiled_scss/styles/_carousel.scss
+++ b/uncompiled_scss/styles/_carousel.scss
@@ -26,6 +26,7 @@
     background: url('../images/slick-arrow.svg') center no-repeat;
     right: -30px;
     top: 45%;
+    cursor: pointer;
   }
 
   .slick-slide {
