--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -859,7 +859,7 @@ input[type="number"] { -moz-appearance: textfield; }
 
 .header-box .header .header-nav { -ms-flex-preferred-size: 45%; flex-basis: 45%; background: red; }
 
-.header-box .header .header-nav .navigation { display: -webkit-box; display: -ms-flexbox; display: flex; list-style: none; height: 50px; padding: 0; margin: 0; }
+.header-box .header .header-nav .navigation { display: -webkit-box; display: -ms-flexbox; display: flex; list-style: none; height: 50px; padding: 0; margin: 0; position: relative; }
 
 .header-box .header .header-nav .navigation .menu-item { -ms-flex-preferred-size: 50px; flex-basis: 50px; -ms-flex-negative: 0; flex-shrink: 0; -webkit-box-flex: 0; -ms-flex-positive: 0; flex-grow: 0; font-size: 14px; font-weight: bold; }
 
@@ -888,6 +888,18 @@ input[type="number"] { -moz-appearance: textfield; }
 .header-box .header .header-nav .navigation .menu-item.multilinks .menu-link:first-child { color: black; }
 
 .header-box .header .header-nav .navigation .menu-item.multilinks .menu-link:last-child { color: white; }
+
+.header-box .header .header-nav .navigation .menu-item.drop-menu .drop-menu-body { display: none; position: absolute; z-index: 100; top: 50px; left: 0; right: 0; list-style: none; padding: 40px 0; margin: 0; background: url("../images/red-film.svg") 90% 93% no-repeat, black; }
+
+.header-box .header .header-nav .navigation .menu-item.drop-menu .drop-menu-body li { display: block; cursor: pointer; }
+
+.header-box .header .header-nav .navigation .menu-item.drop-menu .drop-menu-body li a { display: block; padding: 20px 50px; color: white; text-decoration: none; text-transform: uppercase; font-size: 20px; letter-spacing: 1px; }
+
+.header-box .header .header-nav .navigation .menu-item.drop-menu .drop-menu-body li a:hover { color: red; }
+
+.header-box .header .header-nav .navigation .menu-item.drop-menu:hover { cursor: pointer; }
+
+.header-box .header .header-nav .navigation .menu-item.drop-menu:hover .drop-menu-body { display: block; }
 
 .slider-box .slide .slide-body { display: -webkit-box; display: -ms-flexbox; display: flex; }
 
