--- a/uncompiled_scss/styles/_header.scss
+++ b/uncompiled_scss/styles/_header.scss
@@ -1,6 +1,6 @@
 .header-box {
   position: relative;
-  
+
   .link-to-home {
     position: absolute;
     top: 60px;
@@ -20,6 +20,7 @@
         height: 50px;
         padding: 0;
         margin: 0;
+        position: relative;
 
         .menu-item {
           flex-basis: 50px;
@@ -107,6 +108,48 @@
 
               &:last-child {
                 color: white;
+              }
+            }
+          }
+
+          &.drop-menu {
+            .drop-menu-body {
+              display: none;
+              position: absolute;
+              z-index: 100;
+              top: 50px;
+              left: 0;
+              right: 0;
+              list-style: none;
+              padding: 40px 0;
+              margin: 0;
+              background: url('../images/red-film.svg') 90% 93% no-repeat, black;
+
+              li {
+                display: block;
+                cursor: pointer;
+
+                a {
+                  display: block;
+                  padding: 20px 50px;
+                  color: white;
+                  text-decoration: none;
+                  text-transform: uppercase;
+                  font-size: 20px;
+                  letter-spacing: 1px;
+
+                  &:hover {
+                    color: red;
+                  }
+                }
+              }
+            }
+
+            &:hover {
+              cursor: pointer;
+
+              .drop-menu-body {
+                display: block;
               }
             }
           }
